Fix fade to 93% - much more content visible when collapsed

--- a/core/themes/medical.css
+++ b/core/themes/medical.css
@@ -110,8 +110,8 @@ section.section-about {
 }
 
 #experience .timeline-container.collapsed {
-    mask-image: linear-gradient(to bottom, black 85%, transparent 100%);
-    -webkit-mask-image: linear-gradient(to bottom, black 85%, transparent 100%);
+    mask-image: linear-gradient(to bottom, black 93%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to bottom, black 93%, transparent 100%);
 }
 
 #experience .timeline-container.collapsed::after {
